# monitoring-agent

./: .gitignore  Cargo.toml  README.md
.github/workflows/: compile-test.yml  release.yaml
monitoring-agent-daemon/: Cargo.toml  README.md
monitoring-agent-daemon/resources/prod/systemd/: monitoring-agent.service
monitoring-agent-daemon/resources/test/: logging.yml  systemctl_test.out  systemctl_uuidd_inactive.out  test_full_configuration.json  test_full_integration_test.json  test_simple_invalid_schedule.json  test_simple_tcp.json  test_simple_unknown.json
monitoring-agent-daemon/resources/test/configuration_import_test/: test_full_integration.json  test_simple_command.json  test_simple_db_mariadb.json  test_simple_db_postgres.json  test_simple_http.json  test_simple_http_tlsfields.json  test_simple_loadavg.json  test_simple_meminfo.json  test_simple_process.json  test_simple_server.json  test_simple_systemctl.json
monitoring-agent-daemon/resources/test/server_cert/: server.cer
monitoring-agent-daemon/src/: main.rs
monitoring-agent-daemon/src/api/: common.rs  cpuinfo.rs  loadavg.rs  meminfo.rs  mod.rs  monitor.rs  ping.rs  process.rs  request.rs  response.rs  stat.rs  state.rs
monitoring-agent-daemon/src/common/: applicationerror.rs  args.rs  configuration.rs  historical.rs  mod.rs  monitorstatus.rs  procsdata.rs  types.rs
monitoring-agent-daemon/src/services/: databaseservice.rs  mod.rs  monitoringservice.rs  schedulingservice.rs  server.rs
monitoring-agent-daemon/src/services/jobs/: dbcleanupjob.rs  mod.rs  notificationjob.rs
monitoring-agent-daemon/src/services/monitors/: certificatemonitor.rs  commandmonitor.rs  common.rs  databasemonitor.rs  httpmonitor.rs  loadavgmonitor.rs  meminfomonitor.rs  mod.rs  processmonitor.rs  systemctlmonitor.rs  tcpmonitor.rs
monitoring-agent-daemon/src/services/procs/: cpuinfo.rs  meminfo.rs  mod.rs
monitoring-agent-lib/: Cargo.toml
monitoring-agent-lib/resources/test/: test_cpuinfo  test_group  test_loadavg  test_passwd  test_stat
monitoring-agent-lib/resources/test/processes/2914/: status
monitoring-agent-lib/resources/test/processes/2914/task/54112/: status
monitoring-agent-lib/src/: lib.rs
monitoring-agent-lib/src/common/: error.rs  mod.rs
monitoring-agent-lib/src/proc/: cmdline.rs  cpuinfo.rs  group.rs  loadavg.rs  meminfo.rs  mod.rs  process.rs  stat.rs  statm.rs  user.rs
monitoring-agent-ui/: Cargo.toml  README.md  index.html  package-lock.json  package.json
monitoring-agent-ui/src/: App.vue  main.js
monitoring-agent-ui/src/assets/: base.css
monitoring-agent-ui/src/components/: About.vue  Dashboard.vue  Monitors.vue  ProcessDetails.vue  Processes.vue  Settings.vue  System.vue
monitoring-agent-ui/src/router/: index.js
openapi-spec/: openapi_spec.yaml.yml
resources/prod/etc/: config.json  logging.yml
resources/prod/systemd/: monitoring_agent.service
resources/test/: test_cpuinfo  test_full.json  test_full_integration_test.json  test_meminfo  test_multiple.json  test_simple_command.json  test_simple_http.json  test_simple_invalid_schedule.json  test_simple_tcp.json  test_simple_tlsfields.json  test_simple_unknown.json
resources/test/client_cert/: client.cer  test.p12
resources/test/server_cert/: server.p12  server_private_key.pem  test.cer
src/: main.rs
src/common/: args.rs  configuration.rs  error.rs  mod.rs  monitorstatus.rs  procsdata.rs  status.rs
src/config/: args.rs  mod.rs  monitor.rs
src/monitoring/: mod.rs  monitoring.rs  server.rs
src/monitoring/commandmonitor/: commandmonitor.rs  mod.rs
src/monitoring/httpmonitor/: httpmonitor.rs  mod.rs
src/monitoring/tcpmonitor/: mod.rs  tcpmonitor.rs
src/services/: mod.rs  monitoringservice.rs  server.rs
src/services/monitors/: commandmonitor.rs  httpmonitor.rs  mod.rs  tcpmonitor.rs
src/services/procs/: cpuinfo.rs  meminfo.rs  mod.rs
