[package]
name = "monitoring-agent-daemon"
version = "0.0.21"
edition = "2021"
description = "A monitoring agent that can be used to monitor the health of a system."
license = "Apache 2.0"
repository = "https://github.com/kjetilfjellheim/monitoring-agent"
readme = "README.md"
keywords = ["monitoring", "agent", "health", "system"]
authors = ["Kjetil Fjellheim <kjetil@forgottendonkey.net>"]
categories = ["monitoring", "health", "system"]

[dependencies]
serde = { version = "1.0.205", features = ["derive", ] }                                # For serializing/deserializing.
serde_json = { version = "1.0.122", features = []}                                      # For serializing/deserializing.
tokio-cron-scheduler = "0.11.0"                                                         # For schduling jobs.
tokio = { version = "1.39.2", features = ["full"] }                                     # For schduling jobs.
clap = { version = "4.5.14", features = ["derive"] }                                    # For parsing input arguments.
daemonize = "0.5.0"                                                                     # For daemonizing the process.
reqwest = { version = "0.12.5", features = ["blocking", "native-tls"]}                  # For handling http requests.
futures = "0.3.30"                                                                      # For better handling of futures.
native-tls = "0.2.12"                                                                   # Use native tls for reqwest.
log4rs = { version = "1.3.0"}                                                           # For logging.
log = { version = "0.4.22" }                                                            # For logging.
actix-web = { version = "4.8.0" , features = ["openssl"]}                               # For handling http requests.
chrono = { version = "0.4.38", features = ["serde"]}                                    # For handling time.
monitoring-agent-lib = { path = "../monitoring-agent-lib" }                             # For reading system information.
r2d2 = { version = "0.8.10", features = [   ]}                                          # For handling connection pools.
r2d2_mysql = "25.0.0"                                                                   # For handling mysql connections. 
r2d2_postgres = "0.18.1"                                                                # For handling postgres connections.
bb8 = "0.8.5"                                                                           # For handling connection pools.
bb8-postgres = "0.8.1"                                                                  # For handling postgres connections.
rust_decimal = { version = "1.35.0", features = ["db-postgres"] }                       # For handling decimal numbers towards databases.
tracing = "0.1.40"                                                                      # For logging.
tracing-subscriber = "0.3.18"                                                           # For logging.
tracing-log = "0.2.0"                                                                   # For logging.
openssl = "0.10.35"                                                                     # For handling openssl.

[package.metadata.deb]
maintainer = "Kjetil Fjellheim <kjetil@forgottendonkey.net>"
copyright = "2024, Kjetil Fjellheim <kjetil@forgottendonkey.net"
license-file = ["LICENSE", "4"]
revision = ""
extended-description = """\
A monitoring agent that can be used to monitor the health of a system.
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/monitoring-agent-daemon", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/monitoring-agent-daemon/README", "644"],
    ["resources/prod/etc/config.json", "/etc/monitoring-agent-daemon/config.json", "644"],
    ["resources/prod/etc/logging.yml", "/etc/monitoring-agent-daemon/logging.yml", "644"],
    ["resources/prod/systemd/monitoring-agent.service", "/etc/systemd/system/monitoring-agent-daemon.service", "644"],
]
conf-files = [
    "/etc/monitoring-agent-daemon/config.json",
    "/etc/monitoring-agent-daemon/logging.yml",
    "/etc/systemd/system/monitoring-agent-daemon.service",
]

[profile.release]
lto = true