[package]
name = "monitoring-agent-lib"
version = "0.0.25"
edition = "2021"

[dependencies]
serde = { version = "1.0.209", features = ["derive", ] }                                # For serializing/deserializing.
serde_json = { version = "1.0.128" }                                                    # For serializing/deserializing.
log = { version = "0.4.22" }                                                            # For logging.
regex = "1.10.6"                                                                        # For regular expressions.
tracing = "0.1.40"                                                                      # For logging.
